--- a/index.ipynb
+++ b/index.ipynb
@@ -425,9 +425,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mexico City, Israel\n",
+      "Mexico City, Israel\n",
+      "Mexico City, Israel\n",
+      "Mexico City, Israel\n",
+      "Mexico City, Israel\n",
+      "Mexico City, Israel\n",
+      "Mexico City, Israel\n",
+      "Mexico City, Israel\n",
+      "Mexico City, Israel\n"
+     ]
+    }
+   ],
    "source": [
     "countries.append('Mexico')\n",
     "cities.append('Mexico City')\n",
